// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItuneCard /> should render and match the snapshot 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-bordered ant-card-hoverable ItuneCard__CustomCard-sc-1g3ywlw-0 hpUjWG"
    >
      <div
        class="ant-card-cover"
      >
        <img
          class="ItuneCard__StyledImg-sc-1g3ywlw-1 dHbSaT"
          data-testid="cover-img"
          loading="lazy"
          src="https://is1-ssl.mzstatic.com/image/thumb/Music112/v4/3b/cc/31/3bcc315a-e58f-c678-8d05-b7d62346070f/1d724fe3-daaa-4825-91f0-a47e70a438bd.jpg/100x100bb.jpg"
        />
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-card-meta"
          data-testid="artist-name"
        >
          <div
            class="ant-card-meta-detail"
          >
            <div
              class="ant-card-meta-title"
            >
              Yung Xiety
            </div>
            <div
              class="ant-card-meta-description"
            >
              Arijit Singh (Mashup) - Single
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<ItuneCard /> should render and match the snapshot when song object is empty 1`] = `
<body>
  <div>
    <div
      class="ant-card ant-card-bordered ant-card-hoverable ItuneCard__CustomCard-sc-1g3ywlw-0 hpUjWG"
    >
      <div
        class="ant-card-cover"
      >
        <img
          class="ItuneCard__StyledImg-sc-1g3ywlw-1 dHbSaT"
          data-testid="cover-img"
          loading="lazy"
        />
      </div>
      <div
        class="ant-card-body"
      >
        <div
          class="ant-card-meta"
          data-testid="artist-name"
        />
      </div>
    </div>
  </div>
</body>
`;
